<?xml version="1.0"?>
<package format="3">
  <name>rknn_yolov5_demo</name>
  <version>0.0.1</version>
  <description>RKNN YOLOv5 demo ROS2 package</description>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
  <depend>robot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
